--- a/requirements.txt
+++ b/requirements.txt
@@ -136,7 +136,7 @@ tensorflow-io-gcs-filesystem==0.29.0
 termcolor==2.1.1
 thinc==8.1.5
 threadpoolctl==3.1.0
-tokenizers==0.13.2
+tokenizers>=0.11.1,<0.13
 torch==1.9.0
 tornado==6.2
 tqdm==4.64.1
